@@ -13,6 +13,7 @@ import vn.anhtuan.demoAPI.Repository.UserRepository;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.sql.Timestamp;                    // ✅ đúng package
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
@@ -21,24 +22,15 @@ import java.util.stream.Collectors;
 @Service
 public class QuizResultService {
 
-    @Autowired
-    private QuizResultRepository quizResultRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private QuizService quizService;
-    @Autowired
-    private ChoiceRepository choiceRepository;
-    @Autowired
-    private QuestionRepository questionRepository;
+    @Autowired private QuizResultRepository quizResultRepository;
+    @Autowired private UserRepository userRepository;
+    @Autowired private QuizService quizService;
+    @Autowired private ChoiceRepository choiceRepository;
+    @Autowired private QuestionRepository questionRepository;
 
     public QuizResult getQuizResultById(Integer id) {
-        Optional<QuizResult> quizResult = quizResultRepository.findById(id);
-        return quizResult.orElse(null);
+        return quizResultRepository.findById(id).orElse(null);
     }
-
 
     public List<QuizResult> getUserQuizResults(Long userId) {
         return quizResultRepository.findByUserId(userId);
@@ -86,14 +78,14 @@ public class QuizResultService {
         int totalQuestions = questions.size();
         int correctAnswers = 0;
 
-        // Chuẩn bị đáp án đúng
-        List<Long> questionIds = questions.stream().map(Question::getId).collect(Collectors.toList());
-        Map<Long, Set<Long>> correctChoiceIdsMap = quizService.getCorrectChoiceIdsForQuestions(questionIds);
+        // đáp án đúng
+        List<Long> qIds = questions.stream().map(Question::getId).toList();
+        Map<Long, Set<Long>> correctChoiceIdsMap = quizService.getCorrectChoiceIdsForQuestions(qIds);
 
         for (Question q : questions) {
             List<Long> picked = userAnswers.get(q.getId());
             Set<Long> correct = correctChoiceIdsMap.getOrDefault(q.getId(), Collections.emptySet());
-            Set<Long> pickedSet = picked != null ? new HashSet<>(picked) : Collections.emptySet();
+            Set<Long> pickedSet = (picked != null) ? new HashSet<>(picked) : Collections.emptySet();
 
             if (correct.isEmpty()) {
                 if (pickedSet.isEmpty()) correctAnswers++;
@@ -102,7 +94,7 @@ public class QuizResultService {
             }
         }
 
-        BigDecimal score = totalQuestions > 0
+        BigDecimal score = (totalQuestions > 0)
                 ? new BigDecimal(correctAnswers)
                 .divide(new BigDecimal(totalQuestions), 4, RoundingMode.HALF_UP)
                 .multiply(new BigDecimal("10"))
@@ -116,34 +108,20 @@ public class QuizResultService {
                 durationSeconds, QuizStatus.COMPLETED
         );
 
-        // LƯU + ép ghi xuống DB
-        QuizResult savedResult = quizResultRepository.save(quizResult);
+        QuizResult saved = quizResultRepository.save(quizResult);
         quizResultRepository.flush();
-        try {
-            quizResultRepository.recomputeProgressForUser(userId);
-        } catch (Exception ex) {
-            // không rollback việc lưu bài
-            // log cảnh báo để còn xử lý cấu hình DB sau
-            System.err.println("[WARN] recomputeProgressForUser failed: " + ex.getMessage());
-        }
-        // TÍNH LẠI VÀ UPSERT TOÀN BỘ vào quiz_progress (gộp theo user/subject/grade/type)
-//        quizResultRepository.recomputeProgressForUser(userId);
-        // Trả về kết quả vừa nộp; client nếu cần % theo ngày sẽ lấy qua endpoint daily
-        return savedResult;
+        return saved;
     }
-
 
     public Map<String, Object> getQuizStatistics(Integer quizId) {
         List<QuizResult> results = quizResultRepository.findByQuizId(quizId);
-
         Map<String, Object> stats = new HashMap<>();
         stats.put("totalAttempts", results.size());
 
         if (!results.isEmpty()) {
             double averageScore = results.stream()
                     .mapToDouble(r -> r.getScore().doubleValue())
-                    .average()
-                    .orElse(0.0);
+                    .average().orElse(0.0);
             stats.put("averageScore", averageScore);
 
             long completedCount = results.stream()
@@ -151,33 +129,26 @@ public class QuizResultService {
                     .count();
             stats.put("completionRate", (double) completedCount / results.size() * 100);
 
-            // Thêm thông tin về số lần attempt
             Map<Integer, Long> attemptsDistribution = results.stream()
-                    .collect(Collectors.groupingBy(
-                            QuizResult::getAttemptNo,
-                            Collectors.counting()
-                    ));
+                    .collect(Collectors.groupingBy(QuizResult::getAttemptNo, Collectors.counting()));
             stats.put("attemptsDistribution", attemptsDistribution);
         } else {
             stats.put("averageScore", 0);
             stats.put("completionRate", 0);
             stats.put("attemptsDistribution", new HashMap<>());
         }
-
         return stats;
     }
 
     public Map<String, Object> getUserStatistics(Long userId) {
         List<QuizResult> results = quizResultRepository.findByUserId(userId);
-
         Map<String, Object> stats = new HashMap<>();
         stats.put("totalQuizzesTaken", results.size());
 
         if (!results.isEmpty()) {
             double averageScore = results.stream()
                     .mapToDouble(r -> r.getScore().doubleValue())
-                    .average()
-                    .orElse(0.0) * 10;
+                    .average().orElse(0.0) * 10;
             stats.put("averageScore", averageScore);
 
             long completedCount = results.stream()
@@ -185,20 +156,17 @@ public class QuizResultService {
                     .count();
             stats.put("completionRate", (double) completedCount / results.size() * 100);
 
-            // Count by subject
             Map<String, Long> quizzesBySubject = new HashMap<>();
-            for (QuizResult result : results) {
-                String subjectName = result.getQuiz().getSubject().getName();
+            for (QuizResult r : results) {
+                String subjectName = r.getQuiz().getSubject().getName();
                 quizzesBySubject.put(subjectName, quizzesBySubject.getOrDefault(subjectName, 0L) + 1);
             }
             stats.put("quizzesBySubject", quizzesBySubject);
 
-            // Thêm thông tin về thời gian làm bài trung bình
             double averageDuration = results.stream()
                     .filter(r -> r.getDurationSeconds() != null)
                     .mapToInt(QuizResult::getDurationSeconds)
-                    .average()
-                    .orElse(0.0);
+                    .average().orElse(0.0);
             stats.put("averageDurationSeconds", averageDuration);
         } else {
             stats.put("averageScore", 0);
@@ -206,61 +174,49 @@ public class QuizResultService {
             stats.put("quizzesBySubject", new HashMap<>());
             stats.put("averageDurationSeconds", 0);
         }
-
         return stats;
     }
 
     public QuizResult getBestQuizResultForUser(Long userId, Integer quizId) {
         List<QuizResult> results = getUserQuizResultsForQuiz(userId, quizId);
-
-        if (results.isEmpty()) {
-            return null;
-        }
-
+        if (results.isEmpty()) return null;
         return results.stream()
                 .max(Comparator.comparing(QuizResult::getScore)
                         .thenComparing(QuizResult::getCorrectAnswers))
                 .orElse(null);
     }
 
+    // QuizResultService.java (bên trong getAccuracyFromProgress)
+
     public Optional<QuizProgressPOJO> getAccuracyFromProgress(Long userId,
                                                               Integer gradeId,
                                                               Integer subjectId,
                                                               Integer quizTypeId) {
-        java.util.List<Object[]> rows = quizResultRepository.findAccuracyRows(userId, gradeId, subjectId, quizTypeId);
+        List<Object[]> rows = quizResultRepository.aggregateOverallByUserAndFilters(
+                userId, gradeId, subjectId, quizTypeId);
+
         if (rows == null || rows.isEmpty()) {
-            return Optional.empty();
+            return Optional.of(new QuizProgressPOJO(0L, 0L, 0.0, null));
         }
 
-        long correctSum = 0L;
-        long totalSum   = 0L;
-        java.time.LocalDateTime newest = null;
+        Object[] row = rows.get(0); // <-- lấy dòng đầu
+        long correctSum = ((Number) row[0]).longValue();
+        long totalSum   = ((Number) row[1]).longValue();
 
-        Double cachedPercent = null;
+        LocalDateTime updatedAt = null;
+        Object tsObj = row[2];
+        if (tsObj instanceof java.sql.Timestamp ts)      updatedAt = ts.toLocalDateTime();
+        else if (tsObj instanceof LocalDateTime ldt)     updatedAt = ldt;
+        else if (tsObj instanceof java.sql.Date d)       updatedAt = d.toLocalDate().atStartOfDay();
 
-        for (Object[] r : rows) {
-            long c = (r[0] == null) ? 0L : ((Number) r[0]).longValue();
-            long t = (r[1] == null) ? 0L : ((Number) r[1]).longValue();
-            correctSum += c;
-            totalSum   += t;
+        double percent = (totalSum == 0)
+                ? 0.0
+                : Math.round((correctSum * 100.0 / totalSum) * 100.0) / 100.0;
 
-            java.time.LocalDateTime thisTs = null;
-            if (r[3] instanceof java.sql.Timestamp ts) thisTs = ts.toLocalDateTime();
-            else if (r[3] instanceof java.time.LocalDateTime ldt) thisTs = ldt;
-            if (thisTs != null && (newest == null || thisTs.isAfter(newest))) newest = thisTs;
-
-            if (rows.size() == 1 && r[2] != null) {
-                cachedPercent = ((Number) r[2]).doubleValue();
-            }
-        }
-
-        double percent = (totalSum == 0) ? 0.0
-                : (cachedPercent != null ? cachedPercent : (correctSum * 100.0 / totalSum));
-        percent = Math.round(percent * 100.0) / 100.0;
-
-        return Optional.of(new QuizProgressPOJO(correctSum, totalSum, percent, newest));
+        return Optional.of(new QuizProgressPOJO(correctSum, totalSum, percent, updatedAt));
     }
 
+    /** Daily accuracy: group theo DATE(completed_at) */
     public List<Map<String, Object>> getDailyAccuracy(Long userId,
                                                       LocalDateTime fromDate,
                                                       Integer gradeId,
@@ -270,10 +226,11 @@ public class QuizResultService {
         List<Object[]> rows = quizResultRepository.aggregateDailyAccuracyNative(
                 userId, fromDate, gradeId, subjectId, quizTypeId, chapterId);
 
-        // Gom dữ liệu theo ngày
         Map<LocalDate, long[]> dailyTotals = new LinkedHashMap<>();
         for (Object[] r : rows) {
-            LocalDate day = (r[0] instanceof java.sql.Date d) ? d.toLocalDate() : LocalDate.parse(r[0].toString());
+            LocalDate day = (r[0] instanceof java.sql.Date d)
+                    ? d.toLocalDate()
+                    : LocalDate.parse(r[0].toString());
             long correct = ((Number) r[1]).longValue();
             long total   = ((Number) r[2]).longValue();
 
@@ -285,14 +242,12 @@ public class QuizResultService {
             });
         }
 
-        // Tính % theo tổng đúng/tổng câu
         List<Map<String, Object>> result = new ArrayList<>();
-        for (var entry : dailyTotals.entrySet()) {
-            LocalDate day = entry.getKey();
-            long correct = entry.getValue()[0];
-            long total   = entry.getValue()[1];
-            double percent = (total == 0) ? 0.0 : (correct * 100.0 / total);
-            percent = Math.round(percent * 100.0) / 100.0;
+        for (var e : dailyTotals.entrySet()) {
+            LocalDate day = e.getKey();
+            long correct = e.getValue()[0];
+            long total   = e.getValue()[1];
+            double percent = (total == 0) ? 0.0 : Math.round((correct * 100.0 / total) * 100.0) / 100.0;
 
             result.add(Map.of(
                     "day", day,
@@ -301,41 +256,23 @@ public class QuizResultService {
                     "percentAccuracy", percent
             ));
         }
-
         return result;
     }
 
-    // ... GIỮ NGUYÊN NỘI DUNG HIỆN TẠI CỦA BẠN Ở TRÊN
-
-    /**
-     * (NEW) Lấy % theo NGÀY dựa trên TỔNG correct / TỔNG total trong ngày,
-     * phục vụ vẽ "cột xanh" trong biểu đồ.
-     * Trả về list các map: { day: LocalDate, dailyPercentage: Double, correctSum: Long, totalSum: Long }
-     */
+    /** View range (nếu controller dùng projection DailyAccuracyViewPOJO) */
     public List<Map<String, Object>> getDailyAccuracyByRange(Long userId, LocalDate from, LocalDate to) {
-        List<DailyAccuracyViewPOJO> rows = quizResultRepository.findDailyAccuracyByUserAndRange(
-                userId, from.toString(), to.toString()
-        );
+        List<DailyAccuracyViewPOJO> rows = quizResultRepository
+                .findDailyAccuracyByUserAndRange(userId, from.toString(), to.toString());
 
         List<Map<String, Object>> result = new ArrayList<>();
         for (DailyAccuracyViewPOJO r : rows) {
-            // quizDate có kiểu java.sql.Date theo projection
             LocalDate day = (r.getQuizDate() == null) ? null : r.getQuizDate().toLocalDate();
             Double pct = (r.getDailyPercentage() == null) ? 0.0 : r.getDailyPercentage();
-
-            result.add(Map.of(
-                    "day", day,
-                    "dailyPercentage", pct
-            ));
+            result.add(Map.of("day", day, "dailyPercentage", pct));
         }
         return result;
     }
 
-    /**
-     * (NEW) Lấy "trung bình cộng" theo NGÀY của user:
-     * Tính % mỗi ngày trước (tổng đúng/tổng câu trong ngày), rồi AVG các ngày.
-     * Dùng để hiển thị ở mục "trung bình cộng" trong lịch sử % quiz.
-     */
     public Double getAverageDailyAccuracy(Long userId) {
         Double avg = quizResultRepository.findAverageDailyAccuracyByUser(userId);
         return (avg == null) ? 0.0 : avg;
